@@ -41,3 +41,4 @@
 {
 	-moz-binding: url("chrome://status4evar/content/prefs.xml#css-bg-editor");
 }
+
