@@ -80,11 +80,6 @@ splitter.status4evar-status-splitter
  * Location bar
  */
 
-.urlbar-stack
-{
-	margin: -2px 0px;
-}
-
 .urlbar-input-layer
 {
 	padding: 2px 0px;
