@@ -1,4 +1,5 @@
 Version next
+* Fix location bar margins on Windows in Firefox 9.
 * Added translations for: tr (partial)
 * Updated translations for: el
 
